Agregar input usuario con funcionalidad

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,6 +68,12 @@ b{
     color: #fff;
 }
 
+#mensaje{
+    text-align: center;
+    color: #800;
+    display: none;
+}
+
 .byby {
     font-family: monospace;
     font-size: 40%;
